# neo-tavern

./: .dependency-cruiser.cjs  .editorconfig  .env.example  .gitattributes  .gitignore  .jscpd.json  .mcp.json  AGENTS.md  CLAUDE.md  ONBOARDING.md  README.md  biome.jsonc  components.json  drizzle.config.ts  index.html  knip.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  test-stream.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: mcp.json  settings.json
.husky/: pre-commit
docs/: api-map.md  architecture.md  assets.md  auth-and-credentials-plan.md  auth-verify.md  auth.md  backend_implementation_plan.md  breadth-buildout.md  build-plan.md  conventions.md  corpus-import.md  data-model.md  dependencies.md  dependency-graph.mmd  handoff-0005-relational-fixes.md  handoff-0006-relational-fixes.md  handoff-relational-fixes.md  maintenance-and-scheduling.md  marinara-reference.md  memory-diagram.md  memory.md  observability.md  parity-audit.md  sdk-notes.md  settings-audit.md  ui-direction.md
playwright-report/: index.html
references/: README.md
scripts/: _rebuild.sh  assets-backfill.ts  assets-fsck.ts  assets-gc.ts  backfill-content-hash.ts  backfill-source-text.ts  claude-or-probe.ts  claude-or-turn-probe.ts  cloud-session-start.sh  cloud-setup.sh  compute-cooccurrence.ts  compute-themes.ts  csls.ts  db-baseline.ts  db-reindex.ts  discover-probe.ts  distill-characters.ts  embed-assets-gpu.sh  embed-assets.ts  embed-corpus-gpu.sh  embed-corpus.ts  embed-probe.ts  embedder-compare.ts  (+25 more)
tools/cuda/: pyproject.toml
(+440 files in other folders)
